--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
-index.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Podcast</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>My Podcast</h1>
+    </header>
+    <main>
+        <section id="episodes">
+            <h2>Episodes</h2>
+            <div class="episode">
+                <h3>Episode 1: Introduction</h3>
+                <audio controls>
+                    <source src="episode1.mp3" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+            </div>
+            <div class="episode">
+                <h3>Episode 2: Deep Dive</h3>
+                <audio controls>
+                    <source src="episode2.mp3" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+            </div>
+            <!-- Add more episodes as needed -->
+        </section>
+    </main>
+    <footer>
+        <p>Contact us at: <a href="mailto:podcast@example.com">podcast@example.com</a></p>
+        <p>Follow us on <a href="https://twitter.com/example">Twitter</a></p>
+    </footer>
+    <script src="script.js"></script>
+</body>
+</html>
