--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         </section>
     </main>
     <footer>
-        <p>Contact us at: <a href="mailto:podcast@example.com">podcast@example.com</a></p>
-        <p>Follow us on <a href="https://twitter.com/example">Twitter</a></p>
+        <p>Contact us at: <a href="mailto:williamwillorbilly@gmail.com">williamwillorbilly@gmail.com</a></p>
+        <p>Follow us on <a href="https://https://www.instagram.com/30srockpod/">Instagram</a></p>
     </footer>
     <script src="script.js"></script>
 </body>
