--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </main>
     <footer>
         <p>Contact us at: <a href="mailto:williamwillorbilly@gmail.com">williamwillorbilly@gmail.com</a></p>
-        <p>Follow us on <a href="www.instagram.com/30srockpod/">Instagram</a></p>
+        <p>Follow us on <a href="https://instagram.com/30srockpod/">Instagram</a></p>
     </footer>
     <script src="script.js"></script>
 </body>
